# RemoteSensing

./: .gitignore  README (1).md  baseline_hypersigma_MUMUCD.ipynb  compute_scene_stats.py  config.py  download_subset.txt  emergency_checkpoint.py  file_list.txt  pretrain.py  requirements-pretrain.txt  requirements.txt  setup_data.sh
Pix2Rep-v2_Remi/: README.md  pyproject.toml
Pix2Rep-v2_Remi/config/: config.yaml
Pix2Rep-v2_Remi/config/data/: data.yaml
Pix2Rep-v2_Remi/config/finetuning/: finetuning.yaml
Pix2Rep-v2_Remi/config/pretraining/: pretraining.yaml
Pix2Rep-v2_Remi/config/pretraining/backbone/: unet.yaml
Pix2Rep-v2_Remi/output/wandb/: latest-run
Pix2Rep-v2_Remi/output/wandb/offline-run-20260320_075403-51t0avy8/: run-51t0avy8.wandb
Pix2Rep-v2_Remi/output/wandb/offline-run-20260321_131121-36u462zn/: run-36u462zn.wandb
Pix2Rep-v2_Remi/pix2repv2/: finetuning_module.py  indian_pines_segmentation.py  landcover_segmentation_module.py  linear_probing_module.py  pretraining_module.py
Pix2Rep-v2_Remi/pix2repv2/data/: acdc.py  indian_pines.py  mumucd_dataset.py  mumucd_landcover.py  mumucd_ssl.py
Pix2Rep-v2_Remi/pix2repv2/models/: layers.py  mlp.py  registry.py  swin_unetr.py  unet.py
Pix2Rep-v2_Remi/pix2repv2/utils/: augmentations.py  losses.py  utils.py
Pix2Rep-v2_Remi/scripts/cardiac/: evaluate_pix2repv2.py  finetune_pix2repv2.py  predict_pix2repv2.py  pretrain_pix2repv2.py
Pix2Rep-v2_Remi/scripts/remote_sensing/: predict_mumucd_full_scene.py  pretrain_pix2repv2.py  segment_indian_pines.py  segment_mumucd_landcover.py
data/: augmentations.py  (+1 more)
(+33 files in other folders)
