[project]
name = "Pix2Rep-v2-Remi"
version = "0.1.0"
description = "Remote-sensing adaptation of Pix2Rep-v2 for MUMUCD pretraining"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amid>=0.15.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "lightning>=2.5.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "monai>=1.5.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "termcolor>=3.3.0",
    "torch>=2.8.0",
    "torch-cubic-spline-grids>=0.0.10",
    "torch-tb-profiler>=0.4.3",
    "torchio>=0.20.22",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "unet>=0.8.1",
    "wandb>=0.22.2",
    "wandb-osh>=1.2.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
lint.extend-select = ["T10"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
